# DEP-TEST-KIT

./: .coverage  .fileguard.json  .gitignore  .gitlint  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  HARNESS_INVENTORY.md  HARNESS_ROADMAP.md  Makefile  README.md  SETTINGS-CHECKLIST.md  conftest.py  llms.txt  pyproject.toml
.claude/: settings.json
.claude/agents/: auditor.md  explorer.md  planner.md
.claude/commands/: adr.md  audit-retro.md  audit.md  end-session.md  preflight.md  ship.md
.claude/hooks/: format.sh  guard.sh  log.sh  session-start.sh
.github/: control-policy.json
.github/workflows/: audit.yml  ci.yml  commit-lint.yml  dependency-review.yml  mutation.yml  vacuity.yml
docs/: CI_AND_LIVE_STATE.md  CI_RESEARCH_VERIFICATION_2026-06-14.md  DASHBOARD.md  HARNESS_READING_GUIDE.md  LEARNINGS.md  audit-history.ndjson  moe-audit.md
docs/decisions/: 0000-template.md  0001-stack-decisions.md  0002-self-audit-and-moe-panel.md  0003-agent-scaffolding.md  0004-audit-history-via-artifacts.md  0005-conventional-commits.md  0006-mutation-testing.md  0007-2026-practice-review.md  0008-lane-taxonomy.md
harnesses/ai/: agent_circuit_breaker_test_harness.py  agent_goal_integrity_test_harness.py  agent_human_confirmation_test_harness.py  agent_join_replay_test_harness.py  agent_memory_trust_test_harness.py  agent_message_auth_test_harness.py  agent_safe_eval_test_harness.py  agent_tool_manifest_test_harness.py  agentic_pbt_test_harness.py  geval_rubric_test_harness.py  judge_reliability_test_harness.py  llm_eval_test_harness.py  metamorphic_stability_test_harness.py  rag_faithfulness_test_harness.py
harnesses/integration/: elasticsearch_index_test_harness.py  kafka_stream_test_harness.py  keycloak_oidc_test_harness.py  mongo_store_test_harness.py  mysql_store_test_harness.py  network_chaos_test_harness.py  object_store_test_harness.py  rabbitmq_redelivery_test_harness.py  redis_cache_test_harness.py  vault_secrets_test_harness.py
harnesses/lib/: api_bfla_test_harness.py  api_object_property_authz_test_harness.py  async_http_contract_test_harness.py  cookie_security_test_harness.py  cors_misconfig_test_harness.py  crlf_header_injection_test_harness.py  crypto_agility_test_harness.py  crypto_correctness_test_harness.py  csrf_token_test_harness.py  dependency_confusion_test_harness.py  eu_ai_act_logging_test_harness.py  failopen_authz_test_harness.py  file_upload_validation_test_harness.py  graphql_depth_limit_test_harness.py  hallucinated_symbol_test_harness.py  html_sanitization_test_harness.py  jinja_autoescape_xss_test_harness.py  jinja_ssti_sandbox_test_harness.py  jwt_alg_confusion_test_harness.py  jwt_audience_binding_test_harness.py  ldap_injection_test_harness.py  mutation_quality_test_harness.py  nosql_injection_test_harness.py  open_redirect_test_harness.py  openapi_fuzz_test_harness.py  password_hashing_test_harness.py  path_traversal_test_harness.py  property_roundtrip_test_harness.py  provenance_attestation_test_harness.py  rbac_authz_differential_test_harness.py  reset_token_design_test_harness.py  retry_resilience_test_harness.py  schema_validation_test_harness.py  secret_scanning_test_harness.py  security_headers_test_harness.py  sql_injection_test_harness.py  sql_orm_test_harness.py  ssrf_url_guard_test_harness.py  structured_output_contract_test_harness.py  subresource_integrity_test_harness.py  (+8 more)
template/: harness_template.py
tests/ai/: test_agent_circuit_breaker_proof.py  test_agent_circuit_breaker_test_harness.py  test_agent_goal_integrity_proof.py  test_agent_goal_integrity_test_harness.py  test_agent_human_confirmation_proof.py  test_agent_human_confirmation_test_harness.py  test_agent_join_replay_proof.py  test_agent_join_replay_test_harness.py  test_agent_memory_trust_proof.py  test_agent_memory_trust_test_harness.py  test_agent_message_auth_proof.py  test_agent_message_auth_test_harness.py  test_agent_safe_eval_proof.py  test_agent_safe_eval_test_harness.py  test_agent_tool_manifest_proof.py  test_agent_tool_manifest_test_harness.py  test_agentic_pbt_proof.py  test_agentic_pbt_test_harness.py  test_geval_rubric_proof.py  test_geval_rubric_test_harness.py  test_judge_reliability_proof.py  test_judge_reliability_test_harness.py  test_llm_eval_proof.py  test_llm_eval_test_harness.py  test_metamorphic_stability_proof.py  test_metamorphic_stability_test_harness.py  test_rag_faithfulness_proof.py  test_rag_faithfulness_test_harness.py
tests/integration/: conftest.py  test_elasticsearch_index_proof.py  test_elasticsearch_index_test_harness.py  test_kafka_stream_proof.py  test_kafka_stream_test_harness.py  test_keycloak_oidc_proof.py  test_keycloak_oidc_test_harness.py  test_mongo_store_proof.py  test_mongo_store_test_harness.py  test_mysql_store_proof.py  test_mysql_store_test_harness.py  test_network_chaos_proof.py  test_network_chaos_test_harness.py  test_object_store_proof.py  test_object_store_test_harness.py  test_rabbitmq_redelivery_proof.py  test_rabbitmq_redelivery_test_harness.py  test_redis_cache_proof.py  test_redis_cache_test_harness.py  test_vault_secrets_proof.py  test_vault_secrets_test_harness.py
tests/lib/: test_api_bfla_proof.py  test_api_bfla_test_harness.py  test_api_object_property_authz_proof.py  test_api_object_property_authz_test_harness.py  test_async_http_contract_proof.py  test_async_http_contract_test_harness.py  test_control_audit.py  test_cookie_security_proof.py  test_cookie_security_test_harness.py  test_cors_misconfig_proof.py  test_cors_misconfig_test_harness.py  test_crlf_header_injection_proof.py  test_crlf_header_injection_test_harness.py  test_crypto_agility_proof.py  test_crypto_agility_test_harness.py  test_crypto_correctness_proof.py  test_crypto_correctness_test_harness.py  test_csrf_token_proof.py  test_csrf_token_test_harness.py  test_dependency_confusion_proof.py  test_dependency_confusion_test_harness.py  test_eu_ai_act_logging_proof.py  test_file_guard.py  (+76 more)
tools/: audit_drift.py  control_audit.py  file_guard.py  gate_canary.py  generate_dashboard.py  generate_report.py  scan_staged.py  vacuity_gate.py
(+4 files in other folders)
