[project]
name = "dep-test-kit"
version = "0.1.0"
description = "Dependency-backed and real-service integration test harnesses — the non-stdlib companion to testing-kits."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Scott Roberts (lostsoulfs)" }]

# Runtime deps are split by harness flavor. RULE: only declare a dependency once a
# harness actually imports it — `deptry` (CI) fails on declared-but-unused packages,
# so this list grows one entry per shipped harness, never speculatively.
dependencies = []

[project.optional-dependencies]
# library-backed, in-process harnesses (no external services)
lib = [
  "hypothesis>=6.130",
  "pydantic>=2.7",
  "polyfactory>=2.16",
  "respx>=0.21",
  "httpx>=0.27",
  "time-machine>=2.14",
  "mutmut>=3.2",
  "schemathesis>=4.0",
  "flask>=3.0",
  "cryptography>=43.0",
  "detect-secrets>=1.5",
  "sqlalchemy>=2.0",
  "tenacity>=9.0",
  # >=2.13: fixes PyJWT algorithm-confusion CVE-2026-48526 + alg allow-list bypass
  # CVE-2026-48523. The jwt_alg_confusion harness proves this floor rejects an
  # HS256-with-RSA-public-key forgery and alg=none (also used by integration/keycloak_oidc).
  "pyjwt[crypto]>=2.13",
  # PEP 440 parsing/comparison for the hallucinated_dependency harness (resolves a pinned
  # name==version against the live installed environment). Was transitive; now imported directly.
  "packaging>=24.0",
  # werkzeug.security.safe_join for the path_traversal harness (CWE-22). >=3.0.6 clears
  # CVE-2024-49766 (Windows UNC traversal in safe_join) and CVE-2024-34069 (debugger RCE).
  "werkzeug>=3.0.6",
  # jsonschema Draft validation for cookie_security / security_headers / eu_ai_act_logging
  # (header & field-completeness contracts) and nosql_injection (scalar-input enforcement).
  "jsonschema>=4.21",
  # idna host canonicalization for cors_misconfig / open_redirect / ssrf_url_guard /
  # unicode_account_confusion. >=3.15 clears CVE-2026-45409 (ReDoS in idna.encode).
  "idna>=3.15",
  # requests Session/HTTPAdapter/exception types for crlf_header_injection / failopen_authz /
  # tls_verification (oracles hinge on the real requests types, not httpx). >=2.32.4 clears
  # CVE-2024-47081 (.netrc credential leak) and CVE-2024-35195 (verify=False cache).
  "requests>=2.32.4",
  # jinja2 autoescape + SandboxedEnvironment for jinja_autoescape_xss / jinja_ssti_sandbox
  # (XSS / SSTI). Transitive via flask; promoted to a direct import. >=3.1.6 = current line.
  "jinja2>=3.1.6",
  # graphql-core (import name: graphql) for graphql_depth_limit — query depth-limit fence.
  "graphql-core>=3.2",
  # defusedxml (import name: defusedxml) for xxe_defense — XXE / entity-expansion refusal.
  "defusedxml>=0.7.1",
  # PyYAML (import name: yaml) for yaml_deserialization — safe_load vs the unsafe full loader.
  "pyyaml>=6.0.2",
  # nh3 (maintained Rust/ammonia sanitizer; bleach is EOL) for html_sanitization — strips
  # active markup (script/img/svg/iframe, event handlers, javascript: URLs).
  "nh3>=0.2.15",
  # ldap3 escape_filter_chars (pure-Python, no directory server) for ldap_injection (CWE-90).
  "ldap3>=2.9",
  # python-magic (import name: magic) for file_upload_validation — MIME from magic bytes vs the
  # claimed .ext (CWE-434). Needs the native libmagic library present at runtime.
  "python-magic>=0.4.27",
]
# real-service harnesses (spin ephemeral containers; need Docker at run time)
integration = [
  "testcontainers>=4.14",
  "psycopg[binary]>=3.2",
  "redis>=5.0",
  "pymysql>=1.1",
  "pymongo>=4.7",
  "boto3>=1.34",
  "minio>=7.2",
  "confluent-kafka>=2.5",
  "toxiproxy-python>=0.1",
  "hvac>=2.3",
  # client major must match the 8.13.4 server image in tests/integration/conftest.py
  # (elasticsearch-py enforces same-major compatibility); bump both together.
  "elasticsearch>=8.13,<9",
  "pika>=1.3",
  # >=2.13: fixes PyJWT algorithm-confusion CVE-2026-48526 + alg allow-list bypass
  # CVE-2026-48523 (raw-JWK-as-HMAC / PyJWK key handling). Floor matters here — the
  # keycloak_oidc harness is exactly about token-forgery rejection.
  "pyjwt[crypto]>=2.13",
]
# AI-output / agentic-testing harnesses (in-process, deterministic — no live LLM,
# no API key; an LLM judge is stood in for so the lane stays CI-safe).
ai = [
  "hypothesis>=6.130",
  "deepeval>=2.0",
  # simpleeval expression sandbox for the agent_safe_eval harness (ASI05 / CWE-95) —
  # refuses the attribute-access escape that raw eval() evaluates.
  "simpleeval>=1.0.7",
  # cryptography (Ed25519 sign/verify, HMAC) for the agent identity/replay harnesses:
  # agent_join_replay, agent_message_auth, agent_tool_manifest, agent_human_confirmation.
  # Also in the lib extra, but deptry checks the matching extra, so the ai lane declares it.
  "cryptography>=43.0",
  # pybreaker circuit breaker for agent_circuit_breaker (ASI08 cascading-failure / retry storm).
  "pybreaker>=1.4.1",
]

# PEP 735 dev tooling — not runtime, not scanned as harness imports.
[dependency-groups]
dev = [
  "pytest>=8.2",
  "pytest-xdist>=3.6",
  "pytest-cov>=5",
  "ruff>=0.8",
  "deptry>=0.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["harnesses"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# `integration` tests need Docker; the fast `lib` lane excludes them with -m "not integration".
markers = [
  "integration: requires Docker (real ephemeral service via testcontainers)",
]

[tool.deptry]
# deptry scans the `harnesses/` package; pytest plugins are never imported directly.
known_first_party = ["harnesses"]
[tool.deptry.per_rule_ignores]
# Integration service clients (testcontainers, psycopg, redis, pymysql, pymongo, boto3,
# confluent-kafka) are used by the integration fixtures/tests (tests/integration), not
# imported in harnesses/ itself (each store/harness takes an injected client);
# pytest-xdist is a pytest plugin, never imported directly; mutmut is a CLI *runner*
# invoked via subprocess by the mutation-quality harness, never imported.
DEP002 = [
  "pytest-xdist", "testcontainers", "psycopg", "mutmut",
  "redis", "pymysql", "pymongo", "boto3", "minio", "confluent-kafka",
  "toxiproxy-python",
  # Batch 4 integration clients injected via tests/integration/conftest.py fixtures,
  # never imported in harnesses/ (pyjwt is NOT here — keycloak_oidc imports `jwt` directly).
  "hvac", "elasticsearch", "pika",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# flake8-bandit security lint — this repo ships security-oriented harnesses, so the
# gate tooling (tools/) should not lint generic. S603 (subprocess) and S607 (partial
# exec path) fire on every safe list-form call — universally noisy, no signal here.
extend-select = ["S"]
ignore = ["S603", "S607"]

[tool.ruff.lint.per-file-ignores]
# Harnesses intentionally demonstrate insecure patterns; tests assert + open local
# fixture URLs. S has signal only on the gate machinery in tools/.
"harnesses/**/*.py" = ["S"]
"tests/**/*.py" = ["S"]
